--- a/src/minter_assets/src/index.html
+++ b/src/minter_assets/src/index.html
@@ -16,7 +16,7 @@
     <main>
       <img id="nft" src="logo.png" alt="bootcamp_logo" />
       <form action="#">
-        <label for="name">Enter a tokenURI: &nbsp;</label>
+        <label for="name">Enter a URL to get your MOTOKO: &nbsp;</label>
         <input id="name" alt="Name" type="text" />
       </form>
       <form action="#">
@@ -24,7 +24,7 @@
         <input id="principal" alt="Name" type="text" />
       </form>
       <div>
-        <button id="mint" type="submit">Mint !</button>
+        <button id="mint" type="submit">Click to mint your Motoko too !</button>
       </div>
       <div id="greeting"></div>
     </main>
